# Client

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Horizon.pro  INSTALL  LICENSE  README.md  annotated.html  annotated.js  classes.html  dir_134cac32d20540b7f09fe25514f83733.html  dir_134cac32d20540b7f09fe25514f83733.js  dir_134cac32d20540b7f09fe25514f83733_dep.map  dir_134cac32d20540b7f09fe25514f83733_dep.md5  dir_4a99a62c9938f478583efe370f535a33.html  dir_4a99a62c9938f478583efe370f535a33.js  dir_4a99a62c9938f478583efe370f535a33_dep.map  dir_4a99a62c9938f478583efe370f535a33_dep.md5  dir_65cb1271a491fdbb3a3068e1295060a4.html  dir_65cb1271a491fdbb3a3068e1295060a4.js  dir_65cb1271a491fdbb3a3068e1295060a4_dep.map  dir_65cb1271a491fdbb3a3068e1295060a4_dep.md5  dir_7677ba3c58feefeff1b782da46507d33.html  dir_7677ba3c58feefeff1b782da46507d33.js  dir_7677ba3c58feefeff1b782da46507d33_dep.map  dir_7677ba3c58feefeff1b782da46507d33_dep.md5  dir_9f0432d789e396468af7e9819ab2abe2.html  dir_9f0432d789e396468af7e9819ab2abe2.js  dir_9f0432d789e396468af7e9819ab2abe2_dep.map  dir_9f0432d789e396468af7e9819ab2abe2_dep.md5  dir_e07e578bb212f29b6ac48aef3a1e0809.html  dir_e07e578bb212f29b6ac48aef3a1e0809.js  dir_e07e578bb212f29b6ac48aef3a1e0809_dep.map  dir_e07e578bb212f29b6ac48aef3a1e0809_dep.md5  dir_ea40f39fd94f78178963a929de9b2ebb.html  dir_ea40f39fd94f78178963a929de9b2ebb.js  dir_ea40f39fd94f78178963a929de9b2ebb_dep.map  dir_ea40f39fd94f78178963a929de9b2ebb_dep.md5  dir_f072e4534b1496796c77192f00f780bd.html  (+42 more)
Doc/: Doxyfile
Resource/: Fonts.qrc  Horizon.css  Icons.qrc  Images.qrc  Launcher.rc  Styles.qrc
Resource/UI/: Browser.ui  BuddyList.ui  Community.ui  Library.ui  Settings.ui  homepage.ui  news.ui  newspanel.ui
Source/: AddGameWizard.cpp  AddGameWizard.h  BorderlessWindow.cpp  BorderlessWindow.h  BuddyList.cpp  BuddyList.h  BuddyListExpandable.cpp  BuddyListExpandable.h  Community.cpp  Community.h  DRMSetupWizard.cpp  DRMSetupWizard.h  Database.cpp  Database.h  Defines.h  DetailGameWidget.cpp  DetailGameWidget.h  GameLauncher.cpp  GameLauncher.h  GridGameWidget.cpp  GridGameWidget.h  Homepage.cpp  Homepage.h  Init.h  Library.cpp  Library.h  LibraryCarouselView.cpp  LibraryCarouselView.h  LibraryDetailView.cpp  LibraryDetailView.h  LibraryGridView.cpp  LibraryGridView.h  Main.cpp  MainPanel.cpp  MainPanel.h  Navbar.cpp  Navbar.h  News.cpp  News.h  NewsFeedChooserWindow.cpp  (+27 more)
Source/Libs/: SteamVdfParse.hpp
Translations/: README.md  horizon_da.ts  horizon_de.ts  horizon_en.ts  horizon_es.ts  horizon_fr.ts  horizon_nb.ts  horizon_pl.ts  horizon_pt_BR.ts
d0/d2c/: class_library_carousel_view.html  class_library_carousel_view.js
d0/d3b/: class_database-members.html
d0/d42/: class_last_page.html
d0/d56/: class_database__coll__graph.map
d0/d63/: librarydetailview_8h_source.html
d0/d6e/: winpanel_8h_source.html
d0/d80/: steamhelper_8h_source.html
d0/df6/: class_navbar__coll__graph.map  class_navbar__coll__graph.md5
d1/d01/: class_welcome_page__coll__graph.map  class_welcome_page__coll__graph.md5
d1/d17/: class_d_r_ms_found_page.html  class_d_r_ms_found_page.js
d1/d6e/: class_tab_label-members.html
d1/d88/: class_main_panel.html  class_main_panel.js
d1/da6/: community_8h_source.html
d1/df5/: class_init_page.html
d2/d11/: class_news-members.html
d2/d18/: class_games_found_page.html  class_games_found_page.js
d2/d22/: class_setup_wizard.html  class_setup_wizard.js
d2/d2b/: class_unix_window.html
d2/d36/: class_steam_helper-members.html
d2/d4b/: class_borderless_window.html
d2/d75/: struct_steam_metadata-members.html
d2/d82/: class_grid_game_widget__inherit__graph.map
d2/d84/: class_library__inherit__graph.md5
d2/d86/: class_news_item_widget__coll__graph.md5
d2/d8a/: buddylistexpandable_8h_source.html
d2/dd4/: addgamewizard_8h_source.html
d2/dda/: class_tab_label.html  class_tab_label.js
d2/de2/: class_add_game_wizard__coll__graph.md5
d2/de8/: class_add_news_feeds_page__inherit__graph.map
d2/dfe/: class_store-members.html
d3/d02/: class_games_found_page__coll__graph.map
d3/d0b/: class_add_game_page.html  class_add_game_page.js
d3/d46/: class_games_found_page-members.html
d3/d4d/: class_news_item_widget__inherit__graph.map
d3/d6f/: class_library_carousel_view__inherit__graph.md5
d3/d7b/: class_tab_label__coll__graph.map  class_tab_label__coll__graph.md5
d3/d7d/: winwindow_8h_source.html
d3/d86/: class_settings__inherit__graph.md5
d3/d99/: class_games_found_page__inherit__graph.md5
d3/dea/: class_homepage.html  class_homepage.js
d3/def/: class_unix_window__coll__graph.md5
d4/d32/: gamelauncher_8h_source.html
d4/d6c/: class_database__inherit__graph.md5
d4/d79/: class_navbar.html  class_navbar.js
d4/d7d/: class_news_feed_chooser_window-members.html
d4/d80/: class_add_game_page__inherit__graph.map  class_add_game_page__inherit__graph.md5
d4/da5/: class_library_grid_view-members.html
d4/dbb/: class_buddy_list_expandable__coll__graph.map  class_buddy_list_expandable__coll__graph.md5
d4/dc6/: class_game_launcher-members.html
d4/ddd/: navbar_8h_source.html
d4/deb/: class_detail_game_widget.html  class_detail_game_widget.js
d5/d12/: class_tab_widget-members.html
d5/d14/: class_unix_panel-members.html
d5/d19/: gridgamewidget_8h_source.html
d5/d20/: class_add_game_wizard.html
d5/d2c/: librarygridview_8h_source.html
doc/: Doxyfile
res/: font.qrc  horizon.css  icon.qrc  image.qrc  launcher.rc  styles.qrc
search/: all_0.js  all_1.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  classes_b.js  classes_d.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_a.js  functions_b.js  functions_c.js  namespaces_0.js  search.css  search.js  (+3 more)
src/: database.cpp  gamelauncher.cpp  gamelauncher.h  init.h  main.cpp
(+209 files in other folders)
